# WatermelonDB

./: .babelrc.js  .eslintignore  .eslintrc.js  .eslintrc.yml  .flowconfig  .gitattributes  .gitignore  .imgbotconfig  .prettierrc  .travis.yml  .yarnrc  404.html  CHANGELOG-Unreleased.md  CHANGELOG.md  CONTRIBUTING.md  Gemfile  LICENSE  README.md  SECURITY.md  WatermelonDB.podspec  babel.config.js  blog.html  docs.html  greenkeeper.json  index.html  jest.config.js  metro.config.js  package-lock.json  package.json  prettier.config.js  react-native.config.js  rn-cli.config.js  rn-transformer.js  sitemap.xml  test0.10958691887577032.db  tsconfig.json  tslint.json
.github/: stale.yml
.github/workflows/: ci.yml  nodejs.yml
__tests__/: integrationTests.js  setup.js
assets/css/: styles.170b7886.css
assets/js/: 01a85c17.4102defd.js  0b3c72e9.0188269c.js  103aaffc.28f3094e.js  103aaffc.a781a544.js  17896441.05d4a787.js  1be78505.f1e36bde.js  1c70d5ef.136663f5.js  23933388.c4f4fd7e.js  36627a76.0c9ed844.js  3f57a1b4.ad016ecd.js  3f7a672e.9e0a457b.js  4972.c44f30f6.js  4d76ed4c.56de8b07.js  4d76ed4c.5e0f0e5d.js  523c36cc.1f3aa6ce.js  59362658.91515254.js  6048.62a5faaf.js  608ae6a4.afeb8707.js  62916d12.04ad16a1.js  62916d12.9117c15b.js  6875c492.6ae134ce.js  68c44f5a.10d8bd28.js  6da95d6e.6ff7d224.js  6da95d6e.eaa22f23.js  7036.92a56726.js  70df777a.bd32a1ff.js  7559039e.758ab0f9.js  75f5df17.f06f93df.js  763ec550.7ecec6c5.js  78a6bf15.2c448f0b.js  78a6bf15.7da127e3.js  7aaea92c.82020d3d.js  8018cb73.cbb6f7cc.js  814f3328.8ef8c498.js  85589e6c.154d63c9.js  86f1fc16.4f73b9a1.js  89a0288a.b4be58d2.js  8f3e57b8.7ba3914b.js  935f2afb.2ee2c8bd.js  935f2afb.c391f463.js  (+30 more)
babel/: cjs.js  esm.js
blog/: archive.html  atom.xml  mdx-blog-post.html  rss.xml  tags.html
blog/tags/: docusaurus.html
docs/: 404.html  Actions.html  Actions.md  CHANGELOG.html  CNAME  CONTRIBUTING.html  CRUD.html  CRUD.md  Components.html  Components.md  Demo.html  Demo.md  GettingStarted.md  Installation.html  Installation.md  Model.html  Model.md  Query.html  Query.md  README.md  Relation.html  Relation.md  Roadmap.html  Roadmap.md  SUMMARY.md  Schema.html  Schema.md  Setup.html  Writers.html  book.js  book.toml  ch01-00-get-excited.html  ch02-00-learn-to-use.html  ch02-00-learn-to-use.md  ch03-00-advanced.html  ch04-00-deeper.html  index.html  print.html  searchindex.js  searchindex.json
docs-master/: Actions.md  CRUD.md  CommonMistakes.md  Components.md  Demo.md  Installation.md  Model.md  Query.md  README.md  Relation.md  Roadmap.md  SUMMARY.md  Schema.md  Setup.md  Tutorials.md  Writers.md  book.toml  ch01-00-get-excited.md  ch02-00-learn-to-use.md  ch03-00-advanced.md  ch04-00-deeper.md
docs-master/Advanced/: AdvancedFields.md  CreateUpdateTracking.md  Flow.md  LocalStorage.md  Logging.md  Migrations.md  ProTips.md  SharingDatabaseAcrossTargets.md  Sync.md
docs-master/Implementation/: Adapters.md  SyncImpl.md
docs-website/: docusaurus.config.js  package.json  sidebars.js
docs-website/blog/: 2021-08-01-mdx-blog-post.mdx  authors.yml
docs/Advanced/: AdvancedFields.html  AdvancedFields.md  CreateUpdateTracking.html  CreateUpdateTracking.md  Flow.html  Flow.md  LocalStorage.html  LocalStorage.md  Logging.html  Migrations.html  Migrations.md  Performance.html  Performance.md  ProTips.html  Safety.md  SharingDatabaseAcrossTargets.html  Sorting.md  Sync.html  Sync.md  Transactions.md  UsingObservables.html
docs/Implementation/: Adapters.html  Adapters.md  Architecture.html  Architecture.md  Caching.md  DatabaseAdapters.html  Observation.md  Publishing.html  Publishing.md  Sync.md  SyncImpl.html
docs/Sync/: Backend.html  Contribute.html  FAQ.html  Frontend.html  Intro.html  Limitations.html  Troubleshoot.html
examples/native/: .babelrc  .eslintrc.js  .eslintrc.yml  .gitattributes  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  App.js  README.md  app.json  index.js  metro.config.js  package.json
examples/native63/: App.js  README.md  app.json  babel.config.js  index.js  jsconfig.json  package.json
examples/rn-typescript/: App.tsx  README.md  app.json  babel.config.js  index.js  package.json  tsconfig.json
examples/typescript/: AppSchema.ts  package.json  ts-example.ts  tsconfig.json
examples/web/: .babelrc  .dockerignore  .eslintrc.yml  .gitignore  Dockerfile  README.md  index.ejs  package.json  postcss.config.js  webpack.common.js  webpack.dev.js  webpack.prod.js  webpack.server.js
flow-typed/custom/: lokijs.js  tauri-plugin-sql-api.js  tauri-plugin-sql.js
flow-typed/npm/: jest_v20.x.x.js  rambdax_v0.x.x.js  ramda_v0.x.x.js  rxjs_v6.x.js
native/: .clang-format  .gitignore  .swiftlint.yml  metro-transformer.js
native/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
native/android-jsi/: .gitignore  build.gradle  settings.gradle
native/android-jsi/src/main/cpp/: CMakeLists.txt  DatabasePlatformAndroid.cpp  DatabasePlatformAndroid.h  JSIInstaller.cpp  JSLockPerfHack.cpp  WatermelonJSIInstaller.cpp
native/android/src/main/cpp/: CMakeLists.txt  JSIAndroidBridgeInstaller.cpp  JSIAndroidBridgeWrapper.cpp  JSIAndroidBridgeWrapper.h  JSIUtils.cpp  JSIUtils.h  WatermelonHostObject.cpp  WatermelonHostObject.h
native/androidTest/: .gitignore  build.gradle  gradle.properties  settings.gradle
native/hello-jni/: README.md  settings.gradle
native/hello-jni/hello/src/main/cpp/: CMakeLists.txt  HelloJniCpp.cpp  HelloJniCpp.h  WatermelonJSIInstaller.cpp
patches/: @react-native-windows+cli+0.71.14.patch  react-native+0.72.15.patch
scripts/: any-android-device  ccache-clang  docusaurus  docusaurus-dev  emulator.js  emulator.mjs  emulatorWithJavaCheck  make.js  make.mjs  mdbook  mdbook-dev  pkg.cjs  publish.js  release.js  release.mjs  replace-docs-path.mjs  retryEmuAndTest  rollup.config.js  rollup.rx.js  test-ios  update-docusaurus  wmelon-peril-pr.js
src/: index.d.ts  index.integrationTests.native.js  index.integrationTests.native.tsx  index.js  index.ts  jsi-experiments.js  types.d.ts  types.js  types.ts
windows/: NozbeWatermelondb.sln
(+1124 files in other folders)
